# share-flow

./: .gitignore
backend/: Cargo.toml  add-firewall-rule.bat  build.rs  run-debug.bat  test-udp-listener.bat  test-udp-send.bat  test-udp.bat
backend/src/: discovery.rs  input_capture.rs  input_simulator.rs  main.rs  protocol.rs  transport.rs  web_server.rs  websocket.rs
frontend/: .gitignore  App.tsx  README.md  build-app.bat  constants.ts  index.html  metadata.json  package-lock.json  package.json  start-test.bat  test-connection.html  types.ts
frontend/components/: Button.tsx  DeviceCard.tsx  InputVisualizer.tsx  LocalInputDisplay.tsx  StatusBadge.tsx
frontend/docs/: BUILD.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  VERIFICATION.md  WEBSOCKET.md
frontend/electron/: main.cjs  preload.cjs
frontend/services/: backend.ts  mockBackend.ts  realBackend.ts
