[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
anyhow = "1"
socket2 = "0.5"
local-ip-address = "0.6"
tokio-tungstenite = "0.21"
futures-util = "0.3"
hostname = "0.4"
rdev = { version = "0.5", features = ["unstable_grab"] }
